fixed bg gradient

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -160,7 +160,8 @@ const {
 
     <!-- CTA Button -->
     <div class="hidden md:block">
-      <a href="#contact" class="btn btn-primary">Get Started</a>
+      <a href="#contact" class="btn btn-primary bg-secondary-500">Get Started</a
+      >
     </div>
 
     <!-- Mobile Menu Button -->
