--- a/src/components/sections/PartnersSection.astro
+++ b/src/components/sections/PartnersSection.astro
@@ -35,7 +35,7 @@ const partners = [
 ];
 ---
 
-<section id="partners" class="py-20 bg-white">
+<section id="partners" class="pt-20 bg-white">
   <div class="container mx-auto px-4">
     <div class="max-w-6xl mx-auto">
       <!-- Two-column layout: Text on left, Logo grid on right -->
