try to fix bg card svg

--- a/src/components/sections/ServicesSection.astro
+++ b/src/components/sections/ServicesSection.astro
@@ -1,6 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import bulletListSvg from "../../assets/bullet-list.svg";
+import subtractSvg from "../../assets/subtract.svg";
 ---
 
 <section
@@ -68,8 +69,8 @@ import bulletListSvg from "../../assets/bullet-list.svg";
             </li>
           </ul>
           <div class="absolute top-0 right-0 h-full">
-            <img
-              src="/src/assets/subtract.svg"
+            <Image
+              src={subtractSvg}
               alt="Background"
               class="h-full opacity-20"
             />
@@ -121,8 +122,8 @@ import bulletListSvg from "../../assets/bullet-list.svg";
             </li>
           </ul>
           <div class="absolute top-0 right-0 h-full">
-            <img
-              src="/src/assets/subtract.svg"
+            <Image
+              src={subtractSvg}
               alt="Background"
               class="h-full opacity-20"
             />
@@ -173,8 +174,8 @@ import bulletListSvg from "../../assets/bullet-list.svg";
             </li>
           </ul>
           <div class="absolute top-0 right-0 h-full">
-            <img
-              src="/src/assets/subtract.svg"
+            <Image
+              src={subtractSvg}
               alt="Background"
               class="h-full opacity-20"
             />
@@ -225,8 +226,8 @@ import bulletListSvg from "../../assets/bullet-list.svg";
             </li>
           </ul>
           <div class="absolute top-0 right-0 h-full">
-            <img
-              src="/src/assets/subtract.svg"
+            <Image
+              src={subtractSvg}
               alt="Background"
               class="h-full opacity-20"
             />
@@ -278,8 +279,8 @@ import bulletListSvg from "../../assets/bullet-list.svg";
             </li>
           </ul>
           <div class="absolute top-0 right-0 h-full">
-            <img
-              src="/src/assets/subtract.svg"
+            <Image
+              src={subtractSvg}
               alt="Background"
               class="h-full opacity-20"
             />
@@ -330,8 +331,8 @@ import bulletListSvg from "../../assets/bullet-list.svg";
             </li>
           </ul>
           <div class="absolute top-0 right-0 h-full">
-            <img
-              src="/src/assets/subtract.svg"
+            <Image
+              src={subtractSvg}
               alt="Background"
               class="h-full opacity-20"
             />
