hided team section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const clientTheme = "theme-crown-new";
     <PricingSection />
     <CompetitorsSection />
     <ToolsSection />
-    <TeamSection />
+    <!-- <TeamSection /> -->
     <!-- <TestimonialsSection /> -->
     <PartnersSection />
     <FAQSection />
