improved Competitors section

--- a/src/components/sections/CompetitorsSection.astro
+++ b/src/components/sections/CompetitorsSection.astro
@@ -116,15 +116,15 @@ import divisor from "../../assets/divisor.svg";
       </div>
 
       <div class="mt-16 mb-8">
-        <div class="grid grid-cols-4 gap-4 text-secondary-500 text-xl">
+        <div class="grid grid-cols-4 gap-4 text-secondary-500 text-2xl">
           <div class="col-span-2 text-left font-bold">Services</div>
           <div class="font-bold">Most Providers</div>
           <div class="font-bold">Us</div>
         </div>
 
         <!-- Cost Row -->
-        <div class="mt-4">
-          <div class="grid grid-cols-4 gap-4 text-white items-center">
+        <div class="mt-6">
+          <div class="grid grid-cols-4 gap-4 text-white items-center text-lg">
             <div class="col-span-2 text-left">Cost</div>
             <div class="">$40k - $80k /mo</div>
             <div class="">$5k - $20k /mo</div>
@@ -134,7 +134,7 @@ import divisor from "../../assets/divisor.svg";
 
         <!-- Number of Resources Row -->
         <div class="mt-6">
-          <div class="grid grid-cols-4 gap-4 text-white items-center">
+          <div class="grid grid-cols-4 gap-4 text-white items-center text-lg">
             <div class="col-span-2 text-left">Number of Resources</div>
             <div class="">3 - 5</div>
             <div class="">4 - 10</div>
@@ -144,7 +144,7 @@ import divisor from "../../assets/divisor.svg";
 
         <!-- Expertise Row -->
         <div class="mt-6">
-          <div class="grid grid-cols-4 gap-4 text-white items-center">
+          <div class="grid grid-cols-4 gap-4 text-white items-center text-lg">
             <div class="col-span-2 text-left">Expertise</div>
             <div class="">Mixed, often junior</div>
             <div class="">Subject Matter Experts</div>
@@ -154,7 +154,7 @@ import divisor from "../../assets/divisor.svg";
 
         <!-- Flexibility Row -->
         <div class="mt-6">
-          <div class="grid grid-cols-4 gap-4 text-white items-center">
+          <div class="grid grid-cols-4 gap-4 text-white items-center text-lg">
             <div class="col-span-2 text-left">Flexibility</div>
             <div class="">Fixed staff</div>
             <div class="">Scalable, plug-in resources</div>
@@ -162,39 +162,9 @@ import divisor from "../../assets/divisor.svg";
           <Image src={divisor} alt="Divider" class="w-full my-4" />
         </div>
 
-        <!-- Onboarding Rows -->
+        <!-- Onboarding Row -->
         <div class="mt-6">
-          <div class="grid grid-cols-4 gap-4 text-white items-center">
-            <div class="col-span-2 text-left">Onboarding</div>
-            <div class="">1-3 months</div>
-            <div class="">Go live in under 30 days</div>
-          </div>
-          <Image src={divisor} alt="Divider" class="w-full my-4" />
-        </div>
-
-        <!-- Additional Onboarding Rows (repeated in screenshot) -->
-        <div class="mt-6">
-          <div class="grid grid-cols-4 gap-4 text-white items-center">
-            <div class="col-span-2 text-left">Onboarding</div>
-            <div class="">1-3 months</div>
-            <div class="">Go live in under 30 days</div>
-          </div>
-          <Image src={divisor} alt="Divider" class="w-full my-4" />
-        </div>
-
-        <!-- Additional Onboarding Rows (repeated in screenshot) -->
-        <div class="mt-6">
-          <div class="grid grid-cols-4 gap-4 text-white items-center">
-            <div class="col-span-2 text-left">Onboarding</div>
-            <div class="">1-3 months</div>
-            <div class="">Go live in under 30 days</div>
-          </div>
-          <Image src={divisor} alt="Divider" class="w-full my-4" />
-        </div>
-
-        <!-- Additional Onboarding Rows (repeated in screenshot) -->
-        <div class="mt-6">
-          <div class="grid grid-cols-4 gap-4 text-white items-center">
+          <div class="grid grid-cols-4 gap-4 text-white items-center text-lg">
             <div class="col-span-2 text-left">Onboarding</div>
             <div class="">1-3 months</div>
             <div class="">Go live in under 30 days</div>
