--- a/src/components/sections/CompetitorsSection.astro
+++ b/src/components/sections/CompetitorsSection.astro
@@ -119,7 +119,7 @@ import divisor from "../../assets/divisor.svg";
         <div class="grid grid-cols-4 gap-4 text-secondary-500 text-2xl">
           <div class="col-span-2 text-left font-bold">Services</div>
           <div class="font-bold">Most Providers</div>
-          <div class="font-bold">Us</div>
+          <div class="font-bold">Crown</div>
         </div>
 
         <!-- Cost Row -->
