--- a/src/components/sections/HeroSection.astro
+++ b/src/components/sections/HeroSection.astro
@@ -38,7 +38,7 @@ import PulseBeams from "../ui/PulseBeams.astro";
           <!-- Pulse Beams Background Animation -->
           <PulseBeams
             showButton={true}
-            buttonLink="https://calendly.com/mohamed-crownag"
+            buttonLink="https://calendly.com/mhachicha-crownacquisitiongroup"
             buttonText="Connect the dots"
             buttonClass="btn border border-secondary-400 hover:bg-secondary-500 hover:text-primary-900 text-secondary-300 px-8 py-3 rounded-md transition-all"
           />
