--- a/src/components/sections/WhatWeFixSection.astro
+++ b/src/components/sections/WhatWeFixSection.astro
@@ -82,7 +82,7 @@
       <div class="text-center mt-16 mb-8 pb-12 border-b border-secondary-400">
         <h2 class="text-4xl md:text-5xl font-bold mb-4 text-secondary-400">Want to get a financial diagnosis?</h2>
         <p class="text-2xl text-white mb-10">Let's take a look under the hood, no strings.</p>
-        <a href="https://calendly.com/mohamed-crownag" class="inline-block bg-primary-700 hover:bg-primary-600 text-white font-bold py-4 px-8 rounded-lg transition-colors shadow-lg text-lg">
+        <a href="https://calendly.com/mhachicha-crownacquisitiongroup" class="inline-block bg-primary-700 hover:bg-primary-600 text-white font-bold py-4 px-8 rounded-lg transition-colors shadow-lg text-lg">
           Book a Call
         </a>
       </div>
